Thu Jun 16 06:34:33 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Remove unnecessary nested single quotes.  Remove
	  superfluous trailing ; from Perl one-liners.

Thu Jun 16 06:10:25 GMT 2011  Olly Betts <olly@survex.com>

	* php/docs/index.html: Drop references to Xapian versions before 1.0.0.

Thu Jun 16 06:05:45 GMT 2011  Olly Betts <olly@survex.com>

	* README,configure.ac,php/docs/index.html: Raise the minimum required
	  PHP version to 5.2 as older versions are no longer supported by the
	  PHP developers.  Even 5.2.x was recently declared unsupported
	  upstream.

Thu Jun 16 05:56:59 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Simplify probe for PHP CLI - we dropped PHP4 support in
	  1.1.0 so we can rely on having php-config --php-binary available.

Wed Jun 15 14:13:09 GMT 2011  Olly Betts <olly@survex.com>

	* README,configure.ac,python/docs/index.html: Update required Python
	  version to 2.4.

Wed Jun 15 07:46:04 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-bindings/lua/docs/examples/simpleexpand.lua: Don't try to add
	  anything to the RSet if there are no matches.

Tue Jun 14 03:50:57 GMT 2011  Olly Betts <olly@survex.com>

	* perl/t/symbol-test/SymbolTest.pm: Sync update from XS Search::Xapian
	  - add "1;" to end of test module.

Tue Jun 14 03:48:04 GMT 2011  Olly Betts <olly@survex.com>

	* perl/docs/examples/: Sync updates from XS Search::Xapian: Require
	  Perl >= 5.6 so we can "use warnings;"; loop over file using while()
	  (which reads a line per iteration) not foreach() (which reads the
	  whole file up front).

Mon Jun 13 17:00:27 GMT 2011  Olly Betts <olly@survex.com>

	* perl/generate-perl-exceptions: Simplify.

Mon Jun 13 16:49:52 GMT 2011  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java-swig/Makefile.am,
	  perl/generate-perl-exceptions,python/generate-python-exceptions:
	  More references to Sorter and MultiValueSorter removed.

Mon Jun 13 16:43:58 GMT 2011  Olly Betts <olly@survex.com>
